[gd_scene load_steps=33 format=3 uid="uid://crfa2wpvkfe54"]

[ext_resource type="Shader" uid="uid://q5gl6l885xlp" path="res://shaders/moving_background.tres" id="1_fgfi6"]
[ext_resource type="Script" path="res://scripts/ui/background.gd" id="1_ngib1"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="2_2ryfd"]
[ext_resource type="Texture2D" uid="uid://cyt56kk44s0tp" path="res://sprites/Backgrounds/Blue.png" id="2_u6tv2"]
[ext_resource type="PackedScene" uid="uid://buanw0j1hhak4" path="res://scenes/player.tscn" id="2_ygb5c"]
[ext_resource type="Texture2D" uid="uid://brqq1ryp05rgs" path="res://sprites/Backgrounds/Brown.png" id="3_0cews"]
[ext_resource type="TileSet" uid="uid://ljb63n1ynirn" path="res://world.tres" id="3_5d5k2"]
[ext_resource type="Texture2D" uid="uid://dbipeyw7diq0v" path="res://sprites/Backgrounds/Gray.png" id="4_1ssaw"]
[ext_resource type="Texture2D" uid="uid://c15phtdccgxu0" path="res://sprites/Backgrounds/Green.png" id="5_b352x"]
[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="5_do8vd"]
[ext_resource type="Texture2D" uid="uid://catkmf2ryootn" path="res://sprites/Backgrounds/Pink.png" id="6_rau1g"]
[ext_resource type="Texture2D" uid="uid://bd28jg5juoatg" path="res://sprites/Menu/Buttons/Previous.png" id="6_ut8wb"]
[ext_resource type="Script" path="res://scripts/ui/ui_button.gd" id="7_23pyu"]
[ext_resource type="Texture2D" uid="uid://i0t8o13otn4e" path="res://sprites/Backgrounds/Purple.png" id="7_djvqr"]
[ext_resource type="Texture2D" uid="uid://b3wh6g0xia65q" path="res://sprites/Backgrounds/Yellow.png" id="8_c0b82"]
[ext_resource type="Texture2D" uid="uid://vf0y3nwe4qj7" path="res://sprites/Menu/Buttons/Next.png" id="8_efck4"]
[ext_resource type="Texture2D" uid="uid://bquetiaktm6q" path="res://sprites/Menu/Buttons/Restart.png" id="9_lluaw"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="14_64cd5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bc3kx"]
shader = ExtResource("1_fgfi6")
shader_parameter/Speed = -0.25
shader_parameter/flash_power = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8dbb4"]
shader = ExtResource("14_64cd5")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/width = 0.046

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7mjbr"]

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_pkop2"]
button_index = 9
pressed = true

[sub_resource type="Shortcut" id="Shortcut_6rqp5"]
events = [SubResource("InputEventJoypadButton_pkop2")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4fl7u"]

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_nluqw"]
button_index = 10
pressed = true

[sub_resource type="Shortcut" id="Shortcut_30r6s"]
events = [SubResource("InputEventJoypadButton_nluqw")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qroq6"]

[sub_resource type="InputEventKey" id="InputEventKey_be04k"]
device = -1
keycode = 82
unicode = 114

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_ak7sk"]
button_index = 3
pressed = true

[sub_resource type="Shortcut" id="Shortcut_qib4n"]
events = [SubResource("InputEventKey_be04k"), SubResource("InputEventJoypadButton_ak7sk")]

[sub_resource type="Gradient" id="Gradient_cd8du"]
colors = PackedColorArray(0.129412, 0.121569, 0.188235, 1, 0.129412, 0.121569, 0.188235, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bem6n"]
gradient = SubResource("Gradient_cd8du")
fill_from = Vector2(1, 1)

[node name="World" type="Node"]

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_bc3kx")
position = Vector2(256, 144)
texture = ExtResource("5_b352x")
region_enabled = true
region_rect = Rect2(0, 0, 512, 288)
script = ExtResource("1_ngib1")
textures = Array[Texture2D]([ExtResource("2_u6tv2"), ExtResource("3_0cews"), ExtResource("4_1ssaw"), ExtResource("5_b352x"), ExtResource("6_rau1g"), ExtResource("7_djvqr"), ExtResource("8_c0b82")])
current_texture = "Blue"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("2_2ryfd")
decay = 2.0
amplitude = 10.0

[node name="Player" parent="." instance=ExtResource("2_ygb5c")]
z_index = 5
position = Vector2(256, 168)

[node name="TileMap" type="Node" parent="."]

[node name="Level" type="TileMap" parent="TileMap"]
z_index = 1
tile_set = ExtResource("3_5d5k2")
format = 2
layer_0/name = "Level"
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(1048592, 65536, 0, 1114128, 65536, 5, 16, 65536, 5, 65552, 65536, 2, 0, 65536, 5, 65536, 65536, 5, 131072, 65536, 5, 196608, 65536, 5, 262144, 65536, 5, 327680, 65536, 5, 393216, 65536, 5, 458752, 65536, 5, 524288, 65536, 5, 589824, 65536, 5, 655360, 65536, 5, 720896, 65536, 5, 786432, 65536, 5, 851968, 65536, 5, 917504, 65536, 5, 983040, 65536, 5, 1048576, 65536, 5, 1114112, 65536, 5, 1, 65536, 5, 65537, 196608, 4, 131073, 131072, 5, 196609, 131072, 5, 1048577, 196608, 5, 1114113, 65536, 5, 2, 65536, 5, 65538, 65536, 2, 1048578, 65536, 0, 1114114, 65536, 5, 3, 65536, 5, 65539, 65536, 2, 1048579, 65536, 0, 1114115, 65536, 5, 4, 65536, 5, 65540, 65536, 2, 1048580, 65536, 0, 1114116, 65536, 5, 5, 65536, 5, 65541, 65536, 2, 1048581, 65536, 0, 1114117, 65536, 5, 6, 65536, 5, 65542, 65536, 2, 1048582, 65536, 0, 1114118, 65536, 5, 7, 65536, 5, 65543, 65536, 2, 1048583, 65536, 0, 1114119, 65536, 5, 8, 65536, 5, 65544, 65536, 2, 1048584, 65536, 0, 1114120, 65536, 5, 9, 65536, 5, 65545, 65536, 2, 1048585, 65536, 0, 1114121, 65536, 5, 10, 65536, 5, 65546, 65536, 2, 1048586, 65536, 0, 1114122, 65536, 5, 11, 65536, 5, 65547, 65536, 2, 1048587, 65536, 0, 1114123, 65536, 5, 12, 65536, 5, 65548, 65536, 2, 1048588, 65536, 0, 1114124, 65536, 5, 13, 65536, 5, 65549, 65536, 2, 1048589, 65536, 0, 1114125, 65536, 5, 14, 65536, 5, 65550, 65536, 2, 1048590, 65536, 0, 1114126, 65536, 5, 15, 65536, 5, 65551, 65536, 2, 1048591, 65536, 0, 1114127, 65536, 5, 262145, 131072, 5, 327681, 131072, 5, 393217, 131072, 5, 458753, 131072, 5, 524289, 131072, 5, 589825, 131072, 5, 655361, 131072, 5, 720897, 131072, 5, 786433, 131072, 5, 851969, 131072, 5, 917505, 131072, 5, 983041, 131072, 5, 17, 65536, 5, 65553, 65536, 2, 1048593, 65536, 0, 1114129, 65536, 5, 19, 65536, 5, 65555, 65536, 2, 1048595, 65536, 0, 1114131, 65536, 5, 20, 65536, 5, 65556, 65536, 2, 1048596, 65536, 0, 1114132, 65536, 5, 21, 65536, 5, 65557, 65536, 2, 1048597, 65536, 0, 1114133, 65536, 5, 22, 65536, 5, 65558, 65536, 2, 1048598, 65536, 0, 1114134, 65536, 5, 23, 65536, 5, 65559, 65536, 2, 1048599, 65536, 0, 1114135, 65536, 5, 24, 65536, 5, 65560, 65536, 2, 1048600, 65536, 0, 1114136, 65536, 5, 25, 65536, 5, 65561, 65536, 2, 1048601, 65536, 0, 1114137, 65536, 5, 26, 65536, 5, 65562, 65536, 2, 1048602, 65536, 0, 1114138, 65536, 5, 27, 65536, 5, 65563, 65536, 2, 1048603, 65536, 0, 1114139, 65536, 5, 28, 65536, 5, 65564, 65536, 2, 1048604, 65536, 0, 1114140, 65536, 5, 29, 65536, 5, 65565, 65536, 2, 1048605, 65536, 0, 1114141, 65536, 5, 30, 65536, 5, 65566, 262144, 4, 131102, 0, 5, 196638, 0, 5, 262174, 0, 5, 327710, 0, 5, 393246, 0, 5, 458782, 0, 5, 524318, 0, 5, 589854, 0, 5, 655390, 0, 5, 720926, 0, 5, 786462, 0, 5, 1048606, 262144, 1, 1114142, 65536, 5, 31, 65536, 5, 65567, 65536, 5, 131103, 65536, 5, 196639, 65536, 5, 262175, 65536, 5, 327711, 65536, 5, 393247, 65536, 5, 458783, 65536, 5, 524319, 65536, 5, 589855, 65536, 5, 655391, 65536, 5, 720927, 65536, 5, 786463, 65536, 5, 851999, 65536, 5, 917535, 65536, 5, 983071, 65536, 5, 1048607, 65536, 5, 1114143, 65536, 5, 18, 65536, 5, 1114130, 65536, 5, 1048594, 65536, 0, 65554, 65536, 2, 851998, 0, 5, 917534, 0, 5, 983070, 0, 5, 1179648, 65536, 5, 1179649, 65536, 5, 1179650, 65536, 5, 1179651, 65536, 5, 1179652, 65536, 5, 1179653, 65536, 5, 1179654, 65536, 5, 1179655, 65536, 5, 1179656, 65536, 5, 1179657, 65536, 5, 1179658, 65536, 5, 1179659, 65536, 5, 1179660, 65536, 5, 1179661, 65536, 5, 1179662, 65536, 5, 1179663, 65536, 5, 1179664, 65536, 5, 1179665, 65536, 5, 1179666, 65536, 5, 1179667, 65536, 5, 1179668, 65536, 5, 1179669, 65536, 5, 1179670, 65536, 5, 1179671, 65536, 5, 1179672, 65536, 5, 1179673, 65536, 5, 1179674, 65536, 5, 1179675, 65536, 5, 1179676, 65536, 5, 1179677, 65536, 5, 1179678, 65536, 5, 1179679, 65536, 5, 1179680, 65536, 5, 1114144, 65536, 5, 1048608, 65536, 5, 983072, 65536, 5, 917536, 65536, 5, 852000, 65536, 5, 786464, 65536, 5, 720928, 65536, 5, 655392, 65536, 5, 589856, 65536, 5, 524320, 65536, 5, 458784, 65536, 5, 393248, 65536, 5, 327712, 65536, 5, 262176, 65536, 5, 196640, 65536, 5, 131104, 65536, 5, 65568, 65536, 5, 32, 65536, 5, -65504, 65536, 5, -65505, 65536, 5, -65506, 65536, 5, -65507, 65536, 5, -65508, 65536, 5, -65509, 65536, 5, -65510, 65536, 5, -65511, 65536, 5, -65512, 65536, 5, -65513, 65536, 5, -65514, 65536, 5, -65515, 65536, 5, -65516, 65536, 5, -65517, 65536, 5, -65518, 65536, 5, -65519, 65536, 5, -65520, 65536, 5, -65521, 65536, 5, -65522, 65536, 5, -65523, 65536, 5, -65524, 65536, 5, -65525, 65536, 5, -65526, 65536, 5, -65527, 65536, 5, -65528, 65536, 5, -65529, 65536, 5, -65530, 65536, 5, -65531, 65536, 5, -65532, 65536, 5, -65533, 65536, 5, -65534, 65536, 5, -65535, 65536, 5, -65536, 65536, 5, -1, 65536, 5, 65535, 65536, 5, 131071, 65536, 5, 196607, 65536, 5, 262143, 65536, 5, 327679, 65536, 5, 393215, 65536, 5, 458751, 65536, 5, 524287, 65536, 5, 589823, 65536, 5, 655359, 65536, 5, 720895, 65536, 5, 786431, 65536, 5, 851967, 65536, 5, 917503, 65536, 5, 983039, 65536, 5, 1048575, 65536, 5, 1114111, 65536, 5, 1179647, 65536, 5, 1245183, 65536, 5)

[node name="Level Shadows" type="TileMap" parent="TileMap"]
z_index = 1
position = Vector2(-2, 2)
tile_set = ExtResource("3_5d5k2")
format = 2
layer_0/tile_data = PackedInt32Array(131102, 1, 0, 65566, 1, 0, 196638, 1, 0, 262174, 1, 0, 65565, 1, 0, 65564, 1, 0, 65563, 1, 0, 65562, 1, 0, 65561, 1, 0, 65560, 1, 0, 65559, 1, 0, 65558, 1, 0, 65557, 1, 0, 65556, 1, 0, 65555, 1, 0, 65554, 1, 0, 65553, 1, 0, 65552, 1, 0, 65551, 1, 0, 65550, 1, 0, 65549, 1, 0, 65548, 1, 0, 65547, 1, 0, 65546, 1, 0, 65545, 1, 0, 65544, 1, 0, 65543, 1, 0, 65542, 1, 0, 65541, 1, 0, 65540, 1, 0, 65539, 1, 0, 65538, 1, 0, 786462, 1, 0, 720926, 1, 0, 655390, 1, 0, 589854, 1, 0, 524318, 1, 0, 458782, 1, 0, 393246, 1, 0, 327710, 1, 0, 851998, 1, 0, 917534, 1, 0, 983070, 1, 0)

[node name="Forground" type="TileMap" parent="TileMap"]
z_index = 3
tile_set = ExtResource("3_5d5k2")
format = 2

[node name="Forground Shadows" type="TileMap" parent="TileMap"]
z_index = 2
position = Vector2(-2, 2)
tile_set = ExtResource("3_5d5k2")
format = 2

[node name="Fruits" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_do8vd")
metadata/_edit_lock_ = true

[node name="VBox" type="HBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_constants/separation = -5
alignment = 2

[node name="BackButton" type="Button" parent="UI/VBox"]
material = SubResource("ShaderMaterial_8dbb4")
layout_mode = 2
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_7mjbr")
shortcut = SubResource("Shortcut_6rqp5")
icon = ExtResource("6_ut8wb")
flat = true
script = ExtResource("7_23pyu")

[node name="NextButton" type="Button" parent="UI/VBox"]
material = SubResource("ShaderMaterial_8dbb4")
layout_mode = 2
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_4fl7u")
shortcut = SubResource("Shortcut_30r6s")
shortcut_feedback = false
shortcut_in_tooltip = false
icon = ExtResource("8_efck4")
flat = true
script = ExtResource("7_23pyu")

[node name="RestartButton" type="Button" parent="UI/VBox"]
material = SubResource("ShaderMaterial_8dbb4")
layout_mode = 2
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_qroq6")
shortcut = SubResource("Shortcut_qib4n")
shortcut_feedback = false
shortcut_in_tooltip = false
icon = ExtResource("9_lluaw")
flat = true
script = ExtResource("7_23pyu")

[node name="FadedBottom" type="TextureRect" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_bem6n")
expand_mode = 2

[connection signal="pressed" from="UI/VBox/BackButton" to="UI" method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/VBox/NextButton" to="UI" method="_on_next_button_pressed"]
[connection signal="pressed" from="UI/VBox/RestartButton" to="UI" method="_on_restart_button_pressed"]
